"min-content" & "max-content" keywords should behave as initial value in block axis (but WebKit improperly treats them as the content-size) https://bugs.webkit.org/show_bug.cgi?id=191390

Patch by Rob Buis <rbuis@igalia.com> on 2021-02-20
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update improved test expectation.

* web-platform-tests/html/rendering/non-replaced-elements/the-fieldset-and-legend-elements/min-inline-size-expected.txt:

Source/WebCore:

"min-content" & "max-content" should use automatic size in block direction [1].

This behavior matches Gecko and Blink.

[1] https://drafts.csswg.org/css-sizing-3/#valdef-width-min-content

* rendering/RenderBox.cpp:
(WebCore::RenderBox::constrainLogicalHeightByMinMax const):

LayoutTests:

Adapt test to new behavior.

* fast/css-intrinsic-dimensions/height-expected.html: Removed.
* fast/css-intrinsic-dimensions/height.html: Removed.

Canonical link: https://commits.webkit.org/234392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273206 268f45cc-cd09-0410-ab3c-d52691b4dbfc